# AgentWorks

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: local-dev.example.yaml  runtime.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  health.ts  runs.ts  types.ts
dashboard/src/components/: Badge.tsx  Header.tsx  JsonViewer.tsx  Sidebar.tsx  StatCard.tsx
dashboard/src/hooks/: useIterations.ts
dashboard/src/store/: comparisonStore.ts  runStore.ts  uiStore.ts
dashboard/src/utils/: diffEngine.ts  format.ts  stateColors.ts
dashboard/src/views/AllRuns/: AllRuns.tsx
dashboard/src/views/ConversationThread/: ConversationThread.tsx  MessageBubble.tsx
dashboard/src/views/CostDashboard/: BudgetBurnRate.tsx  CostDashboard.tsx  CostWaterfall.tsx  ExecutionLog.tsx  TokenBreakdown.tsx  ToolFrequency.tsx
dashboard/src/views/RunComparison/: RunComparison.tsx  RunSelector.tsx  StatsDiff.tsx  TimelineDiff.tsx
dashboard/src/views/RunTimeline/: IterationCard.tsx  RunTimeline.tsx  TimelineConnector.tsx
dashboard/src/views/StateMachine/: CheckpointPanel.tsx  (+4 more)
examples/customer-support-agent/: README.md  config.yaml  mock_tools_server.py  run_request.json
examples/customer-support-agent/tools/: billing_history.json  create_ticket.json  customer_lookup.json
examples/ecommerce-fulfillment/: README.md  mock_flaky_server.py  run_request.json
examples/ecommerce-fulfillment/tools/: inventory_check.json  payment_process.json  shipping_create.json
examples/inventory-restock/: README.md  mock_supplier_server.py  run_request.json
examples/inventory-restock/tools/: inventory_levels.json  restock_notify.json  supplier_order.json
src/agentworks/: __init__.py  api.py  checkpoint.py  config.py  engine.py  errors.py  llm_gateway.py  memory.py  observability.py  state_machine.py  tool_registry.py
tests/: test_api.py  test_checkpoint.py  test_config.py  test_engine.py  test_errors.py  test_integration.py  test_llm_gateway.py  test_memory.py  test_observability.py  test_state_machine.py  test_tool_registry.py
